[package]
name = "tlsn-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
tlsn-prover = { workspace = true, features = ["tracing"] }
tlsn-notary.workspace = true
tlsn-core.workspace = true
tlsn-tls-core.workspace = true
tlsn-tls-client.workspace = true
notary-server = { version = "0.1.0-alpha.1", git = "https://github.com/tlsnotary/notary-server" }
mpz-core.workspace = true

futures.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-std",
    "fs",
] }
tokio-util.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

hyper = { version = "0.14", features = ["client", "http1"] }

p256 = { workspace = true, features = ["ecdsa"] }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
webpki-roots.workspace = true

async-tls = { version = "0.12", default-features = false, features = [
    "client",
] }

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.8"
rustls = { version = "0.21" }
rustls-pemfile = { version = "1.0.2" }
tokio-rustls = { version = "0.24.1" }
dotenv = "0.15.0"

tungstenite = "0.19.0"
tokio-tungstenite = "0.19.0"
futures-util = "0.3.28"
log = "0.4.19"
env_logger = "0.8.1"
ws_stream_tungstenite = {version="0.10.0", features=["tokio_io"]}
async-tungstenite = {version="^0.22", features = ["tokio-runtime"]}
asynchronous-codec = "*"
url = "^2"

[[example]]
name = "simple_prover"
path = "simple_prover.rs"

[[example]]
name = "simple_verifier"
path = "simple_verifier.rs"

[[example]]
name = "twitter_dm"
path = "twitter_dm.rs"

[[example]]
name = "simple_notary"
path = "simple_notary.rs"

[[example]]
name = "old_prover"
path = "old_prover.rs"
